test/oscar/compiler/errors/msgAlreadyDeclared.oscar
message testNow()
message testNow()


actor Tester() {
  
  receive = {
    | testNow() => {
        println("Error");
    }
  }
}

def main() => unit = {
  actor<Tester> tester = spawn actor<Tester>());
  message<testLater>() |> tester;
}